Tidies some CSS, ensures accurate spacing

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,12 +1,16 @@
 .footer {
+  @include column(12);
   @extend %clearfix;
   background: transparent image_url('footer/footer-bg.png') no-repeat left top;
   background-size: cover;
-  padding: $baseline-unit*2;
 
   @include respond-to($mq-m) {
     background-position: right top;
   }
+}
+
+.footer__content {
+  padding: $baseline-unit*2;
 }
 
 .footer__search {
